--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.4",
+    "lru-cache": "^4.1.3",
     "semver": "^5.6.0"
   },
   "devDependencies": {
