--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.3",
   "description": "Check if the user is running the latest version of the app",
   "main": "index.js",
+  "typings": "index.d.ts",
   "scripts": {},
   "repository": {
     "type": "git",
