--- a/server/package.json
+++ b/server/package.json
@@ -3,20 +3,12 @@
   "version": "1.0.0",
   "description": "Back-end for react-native-check-version.",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "PORT=3000 nodemon index.jsd"
-  },
-  "author": "Includable <info@includable.com>",
+  "author": "Thomas Schoffelen <thomas@schof.co>",
   "license": "MIT",
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
-    "express": "^4.16.4",
     "lru-cache": "^4.1.5",
     "semver": "^5.6.0"
-  },
-  "devDependencies": {
-    "nodemon": "^1.18.10"
   }
 }
