--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,18 @@
   "author": "Thomas Schoffelen <thomas@schof.co>",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "start": "serverless offline",
+    "deploy": "serverless deploy"
+  },
   "dependencies": {
     "axios": "^0.18.0",
-    "lru-cache": "^4.1.5",
     "semver": "^5.6.0"
+  },
+  "devDependencies": {
+    "serverless": "^1.78.1",
+    "serverless-certificate-creator": "^1.3.0",
+    "serverless-offline": "^6.5.0",
+    "serverless-prune-plugin": "^1.4.3"
   }
 }
