--- a/package.json
+++ b/package.json
@@ -4,7 +4,25 @@
   "description": "Check if the user is running the latest version of the app",
   "main": "index.js",
   "typings": "index.d.ts",
-  "scripts": {},
+  "scripts": {
+    "test": "jest",
+    "lint": "prettier --write ."
+  },
+  "devDependencies": {
+    "@babel/core": "^7.11.1",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-flow": "^7.10.4",
+    "babel-jest": "^26.3.0",
+    "jest": "^26.4.0",
+    "node-fetch": "^2.6.0",
+    "prettier": "^2.0.5",
+    "react-native": ">=0.60.0"
+  },
+  "peerDependencies": {
+    "react-native": ">=0.40.0",
+    "react-native-device-info": ">=0.20.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/includable/react-native-check-version.git"
@@ -23,8 +41,7 @@
     "url": "https://github.com/includable/react-native-check-version/issues"
   },
   "homepage": "https://github.com/includable/react-native-check-version#readme",
-  "peerDependencies": {
-    "react-native": ">=0.40.0",
-    "react-native-device-info": ">=0.20.0"
+  "jest": {
+    "preset": "react-native"
   }
 }
