Clean up back-end certificate.

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -14,7 +14,7 @@ custom:
     number: 20
 
   customCertificate:
-    certificateName: check-version.flexible.agency
+    certificateName: '*.flexible.agency'
     hostedZoneNames: flexible.agency
     region: us-east-1
     rewriteRecords: true
