Add country as parameter for App Store

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -58,6 +58,10 @@ functions:
           path: /{platform}/{bundleId}/{currentVersion}
           method: get
           cors: true
+      - http:
+          path: /{platform}/{country}/{bundleId}/{currentVersion}
+          method: get
+          cors: true
 
 # CloudFormation resources
 resources:
