Fix query string forwarding in Cloudfront.

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -83,7 +83,9 @@ resources:
             ViewerProtocolPolicy: redirect-to-https
             Compress: true
             ForwardedValues:
-              QueryString: false
+              QueryString: true
+              QueryStringCacheKeys:
+                - country
               Cookies:
                 Forward: none
             AllowedMethods:
