--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.21.4",
+    "date-fns": "^2.25.0",
     "semver": "^7.3.5"
   },
   "devDependencies": {
