--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.21.4",
     "date-fns": "^2.25.0",
+    "html-to-text": "^8.1.0",
     "semver": "^7.3.5"
   },
   "devDependencies": {
