--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "test": "jest",
     "lint": "prettier --write ."
   },
+  "dependencies": {
+    "axios": "^0.27.2",
+    "date-fns": "^2.28.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.11.1",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
