--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,5 @@
 name: Tests
-on: [push]
+on: [ push ]
 jobs:
   Jest:
     runs-on: ubuntu-latest
@@ -10,7 +10,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 16
+          cache: yarn
       - name: Install dependencies
-        run: yarn && cd backend && yarn
+        run: yarn
       - name: Run tests
         run: yarn test
