--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "lint": "prettier --write ."
   },
   "dependencies": {
-    "axios": "^0.27.2",
-    "date-fns": "^2.28.0"
+    "axios": "^0.27.2"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
