--- a/package.json
+++ b/package.json
@@ -9,22 +9,23 @@
     "lint": "prettier --write ."
   },
   "devDependencies": {
-    "@babel/core": "^7.11.1",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/preset-env": "^7.11.0",
-    "@babel/preset-flow": "^7.10.4",
-    "babel-jest": "^26.3.0",
-    "jest": "^26.4.0",
+    "@babel/core": "^7.21.3",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-flow": "^7.18.6",
+    "babel-jest": "^29.5.0",
+    "jest": "^29.5.0",
+    "jest-environment-node": "^29.5.0",
     "node-fetch": "^2.6.0",
     "prettier": "^2.0.5",
-    "react-native": ">=0.60.0"
+    "react-native": "^0.70.0"
   },
   "peerDependencies": {
     "react-native": ">=0.40.0",
     "react-native-device-info": ">=0.20.0"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "testEnvironment": "node"
   },
   "repository": {
     "type": "git",
