--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.21.3",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-flow": "^7.18.6",
     "babel-jest": "^29.5.0",
     "jest": "^29.5.0",
     "jest-environment-node": "^29.5.0",
-    "node-fetch": "^2.6.0",
-    "prettier": "^2.0.5",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "node-fetch": "^2.7.0",
+    "prettier": "^2.8.8",
     "react-native": "^0.70.0",
     "semantic-release": "^24.1.1"
   },
@@ -31,7 +30,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/flexible-agency/react-native-check-version.git"
+    "url": "git+https://github.com/tschoffelen/react-native-check-version.git"
   },
   "keywords": [
     "react",
@@ -44,10 +43,10 @@
     "ios",
     "android"
   ],
-  "author": "Flexible Agency <info@flexible.agency>",
+  "author": "Thomas Schoffelen <thomas@schof.co>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/flexible-agency/react-native-check-version/issues"
+    "url": "https://github.com/tschoffelen/react-native-check-version/issues"
   },
-  "homepage": "https://github.com/flexible-agency/react-native-check-version#readme"
+  "homepage": "https://github.com/tschoffelen/react-native-check-version#readme"
 }
